# rosalind_solver

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
docs/: conf.py  index.rst
src/: rosalind_solver.py
src/standard_funcs/: __init__.py  fasta_tab.py  fastx_handling.py  graph.py  maths_operations.py  protein_operations.py  sequence_operations.py
